--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -6,6 +6,14 @@ p {
   all: unset;
 }
 
+.MobileNavigation {
+  display: none;
+}
+
+.NameText {
+  font-size: 16px;
+}
+
 .NavigationMenuRoot {
   position: relative;
   display: flex;
@@ -37,7 +45,7 @@ p {
 .NavigationMenuTrigger:hover,
 .NavigationMenuLink:hover {
   background-color: var(--gray-4);
-  color: var(--white);
+  color: white;
 }
 
 .NavigationMenuTrigger {
@@ -140,7 +148,7 @@ p {
 }
 
 .ListItemLink:hover {
-  color: var(--white);
+  color: white;
   background-color: var(--gray-2);
 }
 
@@ -150,7 +158,7 @@ p {
   justify-content: center;
   width: 100%;
   top: 100%;
-  left: -236px;
+  left: -263px;
   perspective: 2000px;
 }
 
@@ -172,6 +180,11 @@ p {
   height: 10px;
   transform: rotate(45deg);
   border-top-left-radius: 2px;
+}
+
+.SocialIcon {
+  width: 24px !important;
+  height: 24px !important;
 }
 
 @keyframes enterFromRight {
@@ -255,5 +268,52 @@ p {
   }
   to {
     opacity: 0;
+  }
+}
+
+@media screen and (min-width: 960px) and (max-width: 1199px) {
+  .NavigationMenuRoot {
+    display: block;
+  }
+
+  .MobileNavigation {
+    display: none;
+  }
+
+  .NameText {
+    font-size: 14px;
+  }
+
+  .NavigationMenuLink,
+  .NavigationMenuTrigger {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  .SocialIcon {
+    width: 20px !important;
+    height: 20px !important;
+  }
+
+  .ViewportPosition {
+    left: -205px;
+  }
+}
+
+@media screen and (max-width: 959px) {
+  .NavigationMenuRoot {
+    display: none;
+  }
+
+  .MobileNavigation {
+    display: block;
+  }
+
+  .NameText {
+    font-size: 12px;
+  }
+
+  .SocialIconContainer {
+    display: none;
   }
 }
