--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,4 +1,15 @@
-.blink {
+.ContentContainer .rt-ContainerInner {
+  height: 100vh;
+  max-width: 1100px;
+}
+
+.CenteredSection {
+  position: relative;
+  top: 50%;
+  transform: translateY(-164px);
+}
+
+.Blink {
   animation: blink 5s ease-out infinite;
 }
 
@@ -11,5 +22,22 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (min-width: 960px) and (max-width: 1200px) {
+  .ContentContainer .rt-ContainerInner {
+    max-width: 920px;
+  }
+}
+
+@media screen and (max-width: 959px) {
+  .ContentContainer .rt-ContainerInner {
+    max-width: 80%;
+  }
+
+  .MainText {
+    font-size: 24px;
+    line-height: 1.2;
   }
 }
