--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -18,6 +18,10 @@
   animation: blink 5s ease-out infinite;
 }
 
+.IntroTextMobile {
+  display: none;
+}
+
 @keyframes blink {
   0% {
     opacity: 1;
@@ -44,5 +48,13 @@
   .MainText {
     font-size: 24px;
     line-height: 1.2;
+  }
+
+  .IntroText {
+    display: none;
+  }
+
+  .IntroTextMobile {
+    display: flex;
   }
 }
