--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,3 +1,8 @@
+.ScrollContainer {
+  height: 100%;
+  overflow-y: auto;
+}
+
 .ContentContainer .rt-ContainerInner {
   height: 100vh;
   max-width: 1100px;
