--- a/src/components/MobileNavigation.css
+++ b/src/components/MobileNavigation.css
@@ -3,6 +3,10 @@ p {
   all: unset;
 }
 
+.MobileNavigationContainer {
+  position: static;
+}
+
 .NavigationMenuIcon {
   display: flex;
   align-items: center;
@@ -13,6 +17,10 @@ p {
 }
 
 .MobileNavMenuContent {
+  position: absolute;
+  left: 0;
+  top: 72px;
+  padding: 8px 0;
   background-color: #111113;
   animation-duration: 400ms;
   animation-name: menuSlideDownAndFade;
@@ -21,35 +29,41 @@ p {
     "Helvetica Neue", "Open Sans (Custom)", system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji";
   will-change: transform, opacity;
-  padding: 5% 10%;
-  overflow-y: auto;
-  overflow-x: hidden;
-  z-index: 20;
-  width: 300px;
-  max-height: var(--radix-dropdown-menu-content-available-height);
+  z-index: 10;
+  width: 100%;
+  height: auto;
 }
 
 .MobileNavMenuCollapsibleTrigger {
-  width: 240px;
-  padding: 8px 12px;
+  width: 100%;
   outline: none;
   user-select: none;
   font-weight: 500;
   line-height: 1;
-  border-radius: 4px;
   font-size: 16px;
   color: color(display-p3 0.692 0.704 0.728);
-  cursor: pointer;
-}
-.MobileNavMenuCollapsibleTrigger:hover {
-  background-color: color(display-p3 0.163 0.163 0.163);
-  color: white;
 }
 
 .MobileNavMenuCollapsibleContent {
+  margin-left: 16px;
+  margin-bottom: 16px;
 }
 
-.MobileNavMenuSubItem {
+.MobileNavMenuItem {
+  padding: 12px 16px;
+}
+
+.MobileNavMenuItemLink {
+  display: block;
+  font-weight: 500;
+  line-height: 1;
+  text-decoration: none;
+  color: color(display-p3 0.692 0.704 0.728);
+  padding: 12px 16px;
+}
+
+.MobileNavMenuCollapsibleContent .MobileNavMenuItemLink {
+  color: white;
 }
 
 @keyframes menuSlideDownAndFade {
