--- a/src/components/OriginTile.css
+++ b/src/components/OriginTile.css
@@ -27,6 +27,20 @@
   background-color: rgba(48, 48, 48, 1);
 }
 
+.NumberText {
+  display: block;
+}
+.FullText {
+  display: none;
+}
+
+.OriginTileContainer:hover .NumberText {
+  display: none;
+}
+.OriginTileContainer:hover .FullText {
+  display: block;
+}
+
 .DialogOverlay {
   background-color: var(--black-a8);
   position: fixed;
@@ -46,7 +60,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90vw;
-  max-width: 500px;
+  max-width: 600px;
   max-height: 85vh;
   overflow-y: auto;
   padding: 25px;
@@ -97,5 +111,11 @@
   to {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .DialogContent {
+    max-width: 85vw;
   }
 }
