--- a/src/components/IconographyAccordion.css
+++ b/src/components/IconographyAccordion.css
@@ -77,6 +77,11 @@ h3 {
   transform: rotate(180deg);
 }
 
+.IconographyScrollContainer {
+  max-height: 60vh;
+  overflow-y: auto;
+}
+
 .IconographyParagraph {
   display: block;
   line-height: 1.5;
