--- a/src/components/iconography/Carousel.css
+++ b/src/components/iconography/Carousel.css
@@ -2,7 +2,7 @@
   margin-top: 30px;
   --slide-height: 20rem;
   --slide-spacing: 1.2rem;
-  --slide-size: 100%;
+  --slide-size: 98%;
 }
 .embla__viewport {
   overflow: hidden;
@@ -40,13 +40,16 @@
   display: grid;
   grid-template-columns: auto 1fr;
   justify-content: space-between;
-  gap: 1.2rem;
-  margin-top: 1.8rem;
+  gap: 16px;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  margin-left: 4px;
+  margin-right: 16px;
 }
 .embla__buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 0.6rem;
+  gap: 16px;
   align-items: center;
 }
 .embla__button {
@@ -62,8 +65,8 @@
   padding: 0;
   margin: 0;
   box-shadow: inset 0 0 0 0.2rem rgb(25, 25, 25);
-  width: 3.6rem;
-  height: 3.6rem;
+  width: 24px;
+  height: 24px;
   z-index: 1;
   border-radius: 50%;
   color: rgb(222, 222, 222);
@@ -75,8 +78,8 @@
   color: rgb(101, 101, 101);
 }
 .embla__button__svg {
-  width: 35%;
-  height: 35%;
+  width: 100%;
+  height: 100%;
 }
 .embla__dots {
   display: flex;
@@ -97,22 +100,22 @@
   border: 0;
   padding: 0;
   margin: 0;
-  width: 2.6rem;
-  height: 2.6rem;
+  width: 24px;
+  height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
 }
 .embla__dot:after {
-  box-shadow: inset 0 0 0 0.2rem rgb(25, 25, 25);
-  width: 1.4rem;
-  height: 1.4rem;
+  box-shadow: inset 0 0 0 2px rgb(101, 101, 101);
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   content: "";
 }
 .embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.2rem rgb(222, 222, 222);
+  box-shadow: inset 0 0 0 2px rgb(222, 222, 222);
 }
