--- a/src/components/IconographyButtonWhite.css
+++ b/src/components/IconographyButtonWhite.css
@@ -76,7 +76,7 @@
 }
 
 @media screen and (max-width: 800px) {
-  .DialogContent {
+  .DialogContentDark {
     max-height: 70vh;
     max-width: 80vw;
   }
